Basic tokenizing - acts and scenes