@@ -10,7 +10,29 @@
 	<description>Java interpreter for the Shakespeare Programming Language</description>
 
 	<properties>
+		<junit.version>5.4.0</junit.version>
 	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.github.fracpete</groupId>
+			<artifactId>romannumerals4j</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
@@ -20,6 +42,7 @@
 				<version>3.8.0</version>
 				<configuration>
 					<release>15</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
